==================================
Rilascio v2.0.33    del 30/03/2019
==================================

ryUnbound: aggiunto il metodo colwidth.
ryUnbound, ryQue: aggiunto lo scroll per touchscreen.

==================================
Rilascio v2.0.32    del 29/05/2018
==================================

Aggiunto pathseg.js a SVG-Edit per ovviare ai problemi di incompatibilità con i browser

==================================
Rilascio v2.0.31    del 27/05/2018
==================================

Cancellazione allegati: gli allegato ereditati dalla tipologia non vengono più cancellati.

==================================
Rilascio v2.0.30    del 29/03/2018
==================================

ryVlad: corretti errori di sintassi nelle espressioni regolari

Aggiunto il massimo di record estratti in manutenzione movimenti

Pluto: calcolo dell'NPV modificato

==================================
Rilascio v2.0.29    del 05/03/2018
==================================

ryFamily: corretto un'anomalia introdotta nella verisone v2.0.28

==================================
Rilascio v2.0.28    del 24/12/2017
==================================

ryFamily: corretto il malfuzionamento nell'espandere/collassare un nodo in caso di zoom inferiore al 100%.

==================================
Rilascio v2.0.27    del 23/12/2017
==================================

Utilizzato __construct come costruttore di classe nei PHP.

==================================
Rilascio v2.0.26    del 05/09/2017
==================================

ryFamily: applicato lo stile in addfolder e additem.

==================================
Rilascio v2.0.25    del 02/09/2017
==================================

ryCheck: cambio di font per ovviare alle scelte non standard di Microsoft Edge per quanto riguarda i caratteri utf8 grafici.

==================================
Rilascio v2.0.24    del 02/09/2017
==================================

ryFrame: effettuati miglioramenti grafici.
